Bug 1506514 - Don't create accessibles for unselected deck panel descendants. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D31656

--HG--
extra : moz-landing-system : lando